syntax = "proto3";

option go_package = ".;fuwu";


service Nihao{
    rpc Nihao(NihaoRequest) returns (NihaoResponse) {}
}

message NihaoRequest {
        string requestName = 1;
        int64 age = 2;

}

message NihaoResponse {
    string responseMsg = 1;
    int64 id = 2;
    repeated string Names  =3;
}